--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
       <a href="#" class='logo'>Aril</a>
       
       <nav>
-        <a href="#" class='active'>Home</a>
-        <a href="#">Skills</a>
-        <a href="#">Education</a>
-        <a href="#">Contact</a>
+        <a href="#home" class='active'>Home</a>
+        <a href="#skills">Skills</a>
+        <a href="#education">Education</a>
+        <a href="#contact">Contact</a>
       </nav>
     </header>
-    <section class="home">
+    
+    <section id="home" class="home">
       <div class="home-img">
         <img id="profile-image" src="https://media.licdn.com/dms/image/v2/D5603AQEmWFbXkU77lw/profile-displayphoto-shrink_200_200/B56ZWzS2hQHEAY-/0/1742469819827?e=2147483647&v=beta&t=oTLKqXerqQ4UW3jPqs4u_NR0S6yPijsax_VOtIROO7U" alt="Profile Image">
       </div>
@@ -36,6 +37,21 @@
           <a href="#"><i class="fa-brands fa-discord"></i></a>
         </div>
       </div>
+    </section>
+
+    <section id="skills" class="skills">
+      <h2>Skills</h2>
+      <p>Details about skills...</p>
+    </section>
+
+    <section id="education" class="education">
+      <h2>Education</h2>
+      <p>Details about education...</p>
+    </section>
+
+    <section id="contact" class="contact">
+      <h2>Contact</h2>
+      <p>Contact details...</p>
     </section>
   </body>
 </html>
